--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -10,5 +10,9 @@
             android:id="@+id/nav_web"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Web" />
+        <item
+            android:id="@+id/nav_navigate"
+            android:icon="@drawable/ic_menu_share"
+            android:title="Navigate" />
     </group>
 </menu>
