--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,15 +4,20 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Draw" />
+            android:icon="@drawable/ic_menu_share"
+            android:title="Draw Map" />
         <item
             android:id="@+id/nav_web"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Web" />
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="Web"
+            android:visible="false" />
         <item
             android:id="@+id/nav_navigate"
-            android:icon="@drawable/ic_menu_share"
+            android:icon="@drawable/ic_menu_send"
             android:title="Navigate" />
+        <item
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Settings" />
     </group>
 </menu>
